# FourChannelDiodebasedTemperatureMonitor

./: README.md
PCBFiles/: ADC-CurrentSource.kicad_sch  ADClowpassFilter.kicad_sch  PowerCircut.kicad_sch  TempMonitorRev3.0.kicad_pcb  TempMonitorRev3.0.kicad_prl  TempMonitorRev3.0.kicad_pro  TempMonitorRev3.0.kicad_sch  TempMonitorRev3.0.wbk  UART.kicad_sch  fp-info-cache  jlcTempMonitor3.0Bom  untitled.kicad_sch  ~_autosave-TempMonitorRev3.0.kicad_pcb.lck
PCBFiles/jlcProduction/: TempMonitorRev3.0-all-pos.csv  jlcPCBTempMonitor3.0BOM.xlsx
tempmonitorfirmware/: CMakeLists.txt  CheckChan.c  Core2Vars.c  CurrentControl.c  EEprom.c  Globals.c  LakeShoreOnlyTempMonitor.c  PinDeff.h  TCA9548A.c  ads1115.c  ads1115.h  cdsLogo.c  glcdfont.c  ili9341.c  ili9341.h  printDisplay.c  setup.c  voltToTemp.c
tempmonitorgui/: Chan1Graph.py  Chan2Grpah.py  Chan3Graph.py  Chan4Graph.py  Logging.py  Main.py  Main.spec  README.md  TempDisplay.py  TempGUI.py  TempGUI.ui  TempMonitorCommunication.py  dafsd
